# ft2play

./: .gitignore  CMakeLists.txt  README.md  pmp_main.c  pmp_main.h  pmp_mix.c  pmp_mix.h  pmplay.c  pmplay.h  snd_masm.c  snd_masm.h  tables.c  tables.h
audiodrivers/: how_to_write_drivers.txt
audiodrivers/sdl/: sdldriver.c  sdldriver.h
audiodrivers/winmm/: winmm.c  winmm.h
ft2play/: make-linux.sh  make-macos-arm.sh  make-macos-intel.sh  make-macos.sh  make-msys2-clang.sh  make-msys2-gcc.sh
ft2play/src/: ft2play.c  posix.c  posix.h
ft2play/vs2019_project/: ft2play.sln  ft2play.vcxproj  ft2play.vcxproj.filters
